--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,3 +1,26 @@
-<h1>Home#top</h1>
-<p>Find me in app/views/home/top.html.erb</p>
-<div class="btn btn-primary">ボタン</div>
+<section>
+  <div class="top_container">
+    <div class="login_container">
+      <form action="">
+        <%= image_tag "door-knob.jpg", class: "open_door_img" %>
+        <h2 class="font-italic">Welcome</h2>
+        <div class="input_div first_input_div">
+          <i class="fas fa-user"></i>  
+          <div>
+            <h5 class="font-italic">Username</h5>
+            <input type="text" class="input">
+          </div>
+        </div>
+        <div class="input_div second_input_div">
+          <i class="fas fa-lock"></i>  
+          <div>
+            <h5 class="font-italic">Password</h5>
+            <input type="password" class="input">
+          </div>
+        </div>
+        <a href="#">新規登録はこちら</a>
+        <input type="submit" class="btn" value="Login">
+      </form>
+    </div>
+  </div>
+</section>
