--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 10px;
 }
 
 .login_container {
@@ -50,7 +51,7 @@
   position: absolute;
   left: 10px;
   top: 50%;
-  transform: translate(-50%);
+  transform: translate(-42%);
   color:#999;
   font-size: 18px;
   transition: .3s;
