--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,26 +1,26 @@
 <section>
   <div class="top_container">
     <div class="login_container">
-      <form action="">
+      <%= form_for(:session, method: :post, url: 'sessions/create') do |f| %>
         <%= image_tag "door-knob.jpg", class: "open_door_img" %>
         <h2 class="font-italic">Welcome</h2>
         <div class="input_div first_input_div">
           <i class="fas fa-user"></i>  
           <div>
             <h5 class="font-italic">Username</h5>
-            <input type="text" class="input">
+            <%= f.text_field :name, class: "input" %>
           </div>
         </div>
         <div class="input_div second_input_div">
           <i class="fas fa-lock"></i>  
           <div>
             <h5 class="font-italic">Password</h5>
-            <input type="password" class="input">
+            <%= f.password_field :password, class: "input" %>
           </div>
         </div>
         <a href="#">新規登録はこちら</a>
         <input type="submit" class="btn" value="Login">
-      </form>
+      <% end %>
     </div>
   </div>
 </section>
