--- a/app/views/news/test.html.erb
+++ b/app/views/news/test.html.erb
@@ -3,7 +3,8 @@
 <h1>this is test</h1>
 <h1>this is test</h1>
 <h1>this is test</h1>
-<%= @current_teacher %>
+<p><%= @current_teacher %></p>
+<p><%= @current_student %></p>
 <h1>this is test</h1>
 <h1>this is test</h1>
 <%= link_to "ログアウト", "/sessions/destroy", method: :delete, class: "btn btn-danger" %>
