--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,1 +1,52 @@
 <%= render partial: 'header' %>
+<div style="padding: 76px 0 0 0"></div>
+
+<% @news.each do |e| %>
+  <% if e.try(:subject) %>
+  <div class="stu_card">
+    <div class="stu_card_info">
+      <div class="stu_card_info_img">
+        <%= image_tag "stu-profile.jpg", class: "stu_card_info_img_self" %>
+      </div>
+      <div class="stu_card_info_name">
+        <h5><%= e.student.full_name %>君</h5>
+      </div>
+      <div class="stu_card_info_time_ago">
+        <p><%= e.created_at.to_s(:datetime_jp) %></p>
+      </div>
+    </div>
+    <div class="stu_card_comment">
+      <p><%= e.comment %></p>
+    </div>
+    <div class="stu_card_content">
+      <div class="stu_card_content_subject">
+        <p><%= e.subject %></p>
+      </div>
+      <div class="stu_card_content_text">
+        <p><%= e.learning_text %></p>
+      </div>
+    </div>
+    <div class="stu_card_content_time">
+      <p><%= e.learning_time %></p>
+    </div>
+  </div>
+  
+  <% else %>
+  <div class="teacher_card">
+    <div class="teacher_card_info">
+      <div class="teacher_card_info_img">
+        <%= image_tag "self-profile.jpg", class: "teacher_card_info_img_self" %>
+      </div>
+      <div class="teacher_card_info_name">
+        <h4><%= e.teacher.full_name %>先生</h4>
+      </div>
+      <div class="teacher_card_info_time_ago">
+        <p><%= e.created_at.to_s(:datetime_jp) %></p>
+      </div>
+    </div>
+    <div class="teacher_card_comment">
+      <p><%= e.comment %></p>
+    </div>
+  </div>
+  <% end %>
+<% end%>
