--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,13 +1,18 @@
+section {
+  background: #f5f5f5;
+}
 .stu_card {
-  border-bottom: solid 1px #191970;
   margin: 0 320px;
   padding: 10px 30px;
+  background: white;
+  border-bottom: solid 5px #f5f5f5;
 }
 
 .stu_card_info {
   display: grid;
   grid-template-columns: 20% 80%;
-  grid-template-rows: 30px 20px;
+  grid-template-rows: 25px 15px;
+  margin-bottom: 30px;
 }
 .stu_card_info_img {
   grid-column: 1 / 2;
@@ -26,46 +31,92 @@
   grid-column: 2 / 3;
 }
 
-.stu_card_info_name  > h4 {
+.stu_card_info_name  > h5 {
+  font-size: 16px;
   margin: 4px 0px;
 }
 
-.stu_card_comment {
-  margin-top: 1rem;
-  padding-left: 20px;
+.balloon {
+  position: relative;
+  margin: 1.5em 0;
+  padding: 20px;
+  color: black;
+  font-size: 14px;
+  background: #f5f5f5;
+  border-radius: 15px;
+  box-shadow: 0 10px 10px 0 rgba(0, 0, 0, .3);
 }
+
+
 
 .stu_card_info_time_ago {
   grid-row: 2 / 3;
   grid-column: 2 / 3;  
+  font-size: 12px;
 }
+
+.stu_card_comment {
+  font-weight: bold;
+  font-size: 15px;
+}
+
 
 .stu_card_content {
   display: grid;
-  grid-template-columns: 20% 80%;
+  grid-template-columns: 10% 90%;
 }
+
+.stu_card_content_subject_circle {
+  font-family: serif;
+  font-size: 20px;
+  color: #f5f5f5;
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  background: #663333;
+  text-align:center;
+  line-height: 28px;
+}
+
+.stu_card_content_text {
+  bottom: 0;
+  padding: 5px;
+}
+
+.stu_card_content_text_subject{
+  font-size: 15px;
+  font-weight: bold;
+}
+
+
+.stu_card_content_time {
+  text-align: center;
+}
+
 
 
 
 .teacher_card {
-  border-bottom: solid 1px #191970;
-  margin: 0 320px;
-  padding: 0 30px;
+  margin: 10px 320px;
+  padding: 10px 30px;
 }
 
 .teacher_card_info {
   display: grid;
   grid-template-columns: 20% 80%;
-  grid-template-rows: 50px 20px;
+  grid-template-rows: 25px 15px;
+  margin-bottom: 30px;
 }
 .teacher_card_info_img {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+  text-align: center;
 }
 .teacher_card_info_img_self {
   border-radius: 50%;
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
   object-fit: cover;  
 }
 
@@ -74,18 +125,44 @@
   grid-column: 2 / 3;
 }
 
-.teacher_card_info_name  > h4 {
-  margin-top: 10px;
+.teacher_card_info_name  > h5 {
+  font-size: 16px;
+  margin: 4px 0px;
 }
 
 .teacher_card_info_time_ago {
   grid-row: 2 / 3;
   grid-column: 2 / 3;  
+  font-size: 12px;
 }
 
-.teacher_card_comment {
-  margin-top: 1rem;
+.balloon_teacher {
+  position: relative;
+  margin: 1.5em 0;
+  padding: 20px;
+  color: white;
+  font-size: 16px;
+  background:#00008b;
+  border-radius: 15px;
+  box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, .4);
 }
+
+.balloon_teacher:before {
+  content: "";
+  position: absolute;
+  top: -30px;
+  left: 15%;
+  margin-left: -15px;
+  border: 15px solid transparent;
+  border-bottom: 15px solid #00008b;
+}
+
+.balloon_teacher p {
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+}
+
 
 
 @media (min-width: 0px) and (max-width: 900px) {
