news_fieldページのデザインを変更

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,5 +1,16 @@
-section.news_field {
+.news_field_background {
   background: #f5f5f5;
+}
+
+.message_icon {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+.fas {
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 
 
