Teacherの情報編集機能を作成。ページも作成済み。

--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -1,2 +1,29 @@
-<h1>Teachers#edit</h1>
-<p>Find me in app/views/teachers/edit.html.erb</p>
+<%= render partial: 'news/header' %>
+
+<div style="padding-top: 76px;" class="teacher-edit-container">
+  <div class="form-wrapper">
+    <div class="title">
+      <h2>プロフィール編集</h2>
+    </div>
+    <div class="teacher_icon">
+      <%= image_tag @current_teacher.image.url, class: "teacher-profile-img-self image" %>
+    </div>
+    <%= form_for(@current_teacher, url: 'update', method: :post) do |f| %>
+      <div class="form-group row">
+        <%= f.label :full_name, "氏名", class: "col-4 label" %>
+        <%= f.text_field :full_name, class: "form-control col-8" %>
+      </div>
+      <div class="form-group row">
+        <%= f.label :subject, "担当教科", class: "col-4 label" %>
+        <%= f.text_field :subject, class: "form-control col-8" %>
+      </div>
+      <div class="form-group row">
+        <%= f.label :image, "アイコン画像", class: "col-4 label" %>
+        <%= f.file_field :image, class: "file-field form-control col-8" %>
+      </div>
+      <div class="form-group" style="text-align: center;">
+        <%= f.submit "送信", class: "btn btn-outline-warning editButton" %>
+      </div>
+    <% end %>
+  </div>
+</div>
