--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -6,7 +6,7 @@
       <h2>About You</h2>
     </div>
     <div class="teacher_profile_edit">
-      <a href="#" class="teacher_profile_edit_btn">
+      <a href="/teachers/edit" class="teacher_profile_edit_btn">
         <i class="fas fa-user-edit teacher_edit_icon"></i>
       </a>
     </div>
