historyページのデザイン完成しました

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'header' %>
+<%= render partial: 'share/header' %>
 <section class="news_field_background">
   <div style="padding: 76px 0 0 0"></div>
 
