--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'news/header' %>
+<%= render partial: 'share/header' %>
 
 <div style="padding-top: 76px;" class="teacher-edit-container">
   <div class="form-wrapper">
