--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'news/header' %>
+<%= render partial: 'share/header' %>
 <section class="teacher_profile_section">
   <div style="padding: 76px 0 0 0"></div>
   <div class="teacher_profile_title">
