--- a/app/views/news/new_learning_history.html.erb
+++ b/app/views/news/new_learning_history.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'header' %>
+<%= render partial: 'share/header' %>
 <section class="new_learning_history_section">
   <div style="padding: 76px 0 0 0"></div>
   <div class="new_learning_history_title">
