--- a/app/views/news/new_learning_history.html.erb
+++ b/app/views/news/new_learning_history.html.erb
@@ -10,7 +10,11 @@
   <div class="new_learning_history_container">
     <div class="stopwatch_container">
       <h3 class="stopwatch_title">StopWatch</h3>
-      <h6 id="timerLabel">00時間00分00秒</h6>
+      <h6 id="timerLabel">
+        <span id="hour">00</span>時間
+        <span id="min">0</span>分
+        <span id="sec">0</span>秒
+      </h6>
     </div>
 
     <div class="information_container">
