--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,5 +1,6 @@
 <%= render partial: 'share/header' %>
 <section class="teacher_profile_section">
+<%= render partial: 'share/title', locals: {each_title: 'About You'} %>
   <div style="padding: 76px 0 0 0"></div>
   <div class="teacher_profile_title">
     <div>
