ストップウォッチで計測したタイムを学習履歴データとして保存できる機能を実装

--- a/app/views/news/new_learning_history.html.erb
+++ b/app/views/news/new_learning_history.html.erb
@@ -24,7 +24,7 @@
       </div>
       <div class="comment_contaner">
         <label for="exampleFormControlTextarea1">コメント</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"></textarea>
       </div>
     </div>
 
@@ -49,6 +49,7 @@
       <div id ="finish">
         <input type="button" class="myButtons share" id="sharebtn" value="上記の内容でシェア">
         <input type="button" class="myButtons share" id="stillbtn" value="まだ学習を続ける">
+        <!-- <input type="button" class="myButtons share" id="test" value="確認用"> -->
       </div>
     </div>
   </div>
