--- a/app/views/students/history.html.erb
+++ b/app/views/students/history.html.erb
@@ -1,22 +1,7 @@
 <%= render partial: 'share/header' %>
 <section class="news_field_background">
-<%= render partial: 'share/title', locals: {each_title: '学習履歴'} %>
+<%= render partial: 'share/title', locals: {each_title: 'StartLearning'} %>
 
 <% @histories.each do |h| %>
-<div class="balloon">
-  <div class="stu_card_comment">
-    <p><%= h.comment %></p>
-  </div>
-  <div class="stu_card_content">
-    <div class="stu_card_content_subject">
-      <p class="stu_card_content_subject_circle"><%= h.subject[0, 1] %></p>
-    </div>
-    <div class="stu_card_content_text">
-      <span class= "stu_card_content_text_subject">教材: </span><span><%= h.learning_text %></span>
-    </div>
-  </div>
-  <div class="stu_card_content_time">
-    <p><%= h.learning_time.to_s(:time_jp) %></p>
-  </div>
-</div>
+  <%= render partial: 'share/student-history', locals: {variable: h} %>
 <% end %>
