スコアのグラフ表示とカレンダー機能に必要なgemのインストールと、各種初期設定。

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -50,7 +50,7 @@
     </div>
   <% else %>
     <div class="new_message_add">
-    <a href="#" class="new_message_add_btn">
+    <a href="/new_lh" class="new_message_add_btn">
     <i class="fas fa-pencil-alt message_icon"></i></i>
     </a>
     </div>
