--- a/app/views/students/show_calender.html.erb
+++ b/app/views/students/show_calender.html.erb
@@ -1,7 +1,7 @@
 <%= render 'share/header' %>
-<h2>まずは</h2>
-<h2>まずは</h2>
-<h2>まずは</h2>
-<h2>まずは</h2>
-<h2>まずは</h2>
-<h2>まずは</h2>
+<h1>カレンダー</h1>
+<h1>カレンダー</h1>
+<h1>カレンダー</h1>
+<h1>カレンダー</h1>
+<h1>カレンダー</h1>
+<div id="calendar"></div>
