テストページを変更

--- a/app/views/news/test.html.erb
+++ b/app/views/news/test.html.erb
@@ -3,8 +3,16 @@
 <h1>this is test</h1>
 <h1>this is test</h1>
 <h1>this is test</h1>
+<p>sdfsdfsdfs</p>
+<p>sdfsdfsdfs</p>
+<p>sdfsdfsdfs</p>
+<p>sdfsdfsdfs</p>
+<p>sdfsdfsdfs</p>
+<h1>this is test</h1>
 <p><%= @current_teacher %></p>
 <p><%= @current_student %></p>
+<h1>this is test</h1>
+<h1>this is test</h1>
 <h1>this is test</h1>
 <h1>this is test</h1>
 <%= link_to "ログアウト", "/sessions/destroy", method: :delete, class: "btn btn-danger" %>
