FullCalenderに対応するため、eventsテーブルのカラムを変更

--- a/app/views/students/show_calender.html.erb
+++ b/app/views/students/show_calender.html.erb
@@ -1,7 +1,5 @@
 <%= render 'share/header' %>
-<h1>カレンダー</h1>
-<h1>カレンダー</h1>
-<h1>カレンダー</h1>
-<h1>カレンダー</h1>
-<h1>カレンダー</h1>
-<div id="calendar"></div>
+<div style="padding-top: 100px;"></div>
+<div class="calendar-wrapper">
+  <div id="calendar"></div>
+</div>
