--- a/app/assets/stylesheets/calender.scss
+++ b/app/assets/stylesheets/calender.scss
@@ -1,3 +1,8 @@
-#calendar {
-  width: 500px;
+// #calendar {
+//   width: 500px;
+// }
+
+.calendar-wrapper {
+  height: 100vh;
+  padding: 30px 50px;
 }
