eventの新規作成を実装。正常にカレンダー表示されることも確認済み

--- a/app/assets/stylesheets/calender.scss
+++ b/app/assets/stylesheets/calender.scss
@@ -14,3 +14,9 @@
 .event_detail {
   font-weight: bold;
 }
+
+.form-check-input {
+  position: relative !important; 
+  margin-top: 0 !important; 
+  margin-left: 0 !important;
+}
