--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,2 +1,48 @@
-<h1>Events#new</h1>
-<p>Find me in app/views/events/new.html.erb</p>
+<%= render 'share/header' %>
+<div style="
+  min-height: 100vh;
+  padding: 100px;
+  width: 600px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  ">
+<%= form_for @event do |f| %>
+  <div class="form-group">
+    <%= f.label :title, "タイトル"%>
+    <%= f.text_field :title, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :description, "内容"%>
+    <%= f.text_area :description, class: "form-control", style: "width: 400px; height: 100px;" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :subject, "教科"%>
+    <%= f.text_field :subject, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :start, "開始日時"%><br/>
+    <%= f.datetime_select :start, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :end, "終了日時"%><br/>
+    <%= f.datetime_select :end, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :allday, "終日"%>
+    <%= f.check_box :allday, class: "form-check-input", style: "margin-right: 100px;" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :homework, "宿題"%>
+    <%= f.text_field :homework, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :student_id, "送り先の生徒" %>
+    <%= f.collection_select(:student_id, Student.where(id: @current_teacher.id), :id, :full_name) %>
+  </div>
+  <%= f.hidden_field :teacher_id, value: @current_teacher.id %>
+  
+  <%= f.submit "作成", class: "btn btn-success"%>
+<% end %>
+</div>
