--- a/app/assets/stylesheets/title.scss
+++ b/app/assets/stylesheets/title.scss
@@ -1,4 +1,5 @@
 .share_title {
-  padding: 20px 60px;
+  padding: 15px 60px;
   background-color: white;
+  font-family: 'Times New Roman', Times, serif;
 }
