--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -7,7 +7,7 @@
   <div class="stu_card">
     <div class="stu_card_info">
       <div class="stu_card_info_img">
-        <%= image_tag "stu-profile.jpg", class: "stu_card_info_img_self" %>
+        <%= image_tag e.student.image.url, class: "stu_card_info_img_self" %>
       </div>
       <div class="stu_card_info_name">
         <h5><%= e.student.full_name %>君</h5>
