--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -19,20 +19,32 @@
       </div>
     </div>    
     <div class="bg-dark p-4">
-    <a href="#"><h5 class="text-white h4">プロフィール</h5></a>
+      <% if @current_student %>
+        <a href="/students/<%= @current_student.id %>"><h5 class="text-white h4">プロフィール</h5></a>
+      <% else %>
+        <a href="#"><h5 class="text-white h4">プロフィール</h5></a>
+      <% end %>
     </div>
     <div class="bg-dark p-4">
-    <a href="#"><h5 class="text-white h4">学習履歴</h5></a>
+      <% if @current_student %>
+        <a href="/history"><h5 class="text-white h4">学習履歴</h5></a>
+      <% else %>
+        <a href="#"><h5 class="text-white h4">学習履歴</h5></a>
+      <% end %>
     </div>
     <div class="bg-dark p-4">
-    <a href="#"><h5 class="text-white h4">小テスト</h5></a>
-    </div>
+      <% if @current_student %>
+        <a href="/students/show_test"><h5 class="text-white h4">小テスト</h5></a>
+      <% else %>
+        <a href="#"><h5 class="text-white h4">小テスト</h5></a>
+      <% end %>
+      </div>
     <div class="bg-dark p-4">
-    <% if @current_student %>
-      <a href="/students/show_calender"><h5 class="text-white h4">授業</h5></a>
-    <% else %>
-    <a href="#"><h5 class="text-white h4">授業</h5></a>
-    <% end %>
+      <% if @current_student %>
+        <a href="/students/show_calender"><h5 class="text-white h4">授業</h5></a>
+      <% else %>
+        <a href="#"><h5 class="text-white h4">授業</h5></a>
+      <% end %>
     </div>
   </div>
   <nav class="navbar navbar-dark bg-dark">
