--- a/app/views/teachers/show_calender.html.erb
+++ b/app/views/teachers/show_calender.html.erb
@@ -1,26 +1,49 @@
 <%= render 'share/header' %>
 <div style="padding-top: 100px;"></div>
-<div class="calendar-wrapper">
-  <div id="calendar" style="height: 1000px;"></div>
+
+<div class="show_test_student_list">
+  <ul class="nav nav-tabs">
+    <% @students.each_with_index do |s, i| %>
+    <li class="nav-item">
+        <a href="/teachers/show_calender/<%= s.id %>" class="nav-link" >
+   
+        <%= image_tag s.image.url, class: "stu_card_info_img_circle" %>
+        <h5><%= s.full_name %>君</h5>
+      </a>
+    </li>
+    <% end %>
+  </ul>
 </div>
 
-<div class="events_index_wrapper">
-  <% @events.each do |e| %>
-    <div class="event_card">
-      <div class="left">
-        <h3 style="color: #fff;font-size: 24px;"><%= e.title%></h3>
-        <small style="color: #eee;"><%= e.start.to_s(:datetime_jp)%></small>
-      </div>
-      <div class="right">
-        <span class="badge badge-info">
-          <small><%= e.subject %></small>
-        </span>
-        <h4 style="font-size: 20px; margin: 7px 0"><%= e.description %></h4>
-        <small><%= e.start.to_s(:datetime_jp) %> ~ <%= e.end.to_s(:datetime_jp) %></small>
-        <div class="homework_wrapper">
-          <p>宿題 : <%= e.homework %></p>
-        </div>
-      </div>
+    <h2 style="
+      text-align: center;
+      font-family: cursive;
+      margin: 30px auto;
+      width: 400px;
+      border-bottom: 1px solid #999;
+    "><%= @student.full_name %></h2>
+  
+    <div class="calendar-wrapper">
+      <div id="calendar" style="height: 1000px;"></div>
     </div>
-  <% end %>
-</div>
+
+    <div class="events_index_wrapper">
+      <% @events.each do |e| %>
+        <div class="event_card">
+          <div class="left">
+            <h3 style="color: #fff;font-size: 24px;"><%= e.title%></h3>
+            <small style="color: #eee;"><%= e.start.to_s(:datetime_jp)%></small>
+          </div>
+          <div class="right">
+            <span class="badge badge-info">
+              <small><%= e.subject %></small>
+            </span>
+            <h4 style="font-size: 20px; margin: 7px 0"><%= e.description %></h4>
+            <small><%= e.start.to_s(:datetime_jp) %> ~ <%= e.end.to_s(:datetime_jp) %></small>
+            <div class="homework_wrapper">
+              <p>宿題 : <%= e.homework %></p>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
