--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -43,7 +43,7 @@
   padding: 20px;
   color: black;
   font-size: 14px;
-  background: #f5f5f5;
+  background: linear-gradient(to right, #DCDCDC, #D3D3D3, #DCDCDC);
   border-radius: 15px;
   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, .3);
 }
@@ -143,7 +143,7 @@
   padding: 20px;
   color: white;
   font-size: 16px;
-  background:#00008b;
+  background:linear-gradient(to right, #CD853F, #F4A460, #CD853F);
   border-radius: 15px;
   box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, .4);
 }
@@ -155,7 +155,7 @@
   left: 15%;
   margin-left: -15px;
   border: 15px solid transparent;
-  border-bottom: 15px solid #00008b;
+  border-bottom: 15px solid #CD853F;
 }
 
 .balloon_teacher p {
