--- a/app/assets/stylesheets/title.scss
+++ b/app/assets/stylesheets/title.scss
@@ -1,5 +1,5 @@
 .share_title {
   padding: 15px 60px;
-  background-color: white;
+  background: white;
   font-family: 'Times New Roman', Times, serif;
 }
